--- a/app/zipextractor/src/main/res/values/colors.xml
+++ b/app/zipextractor/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="blue_50">#41B2EBF2</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
